@@ -15,6 +15,8 @@
 #include <pthread.h>
 #include <stdlib.h>
 #include <unistd.h>
+#include <sys/time.h>
+#include <assert.h>
 
 #include <posix/errno.h>
 #include <atheos/atomic.h>
@@ -22,6 +24,8 @@
 #include <atheos/kernel.h>
 
 #include "inc/bits.h"
+
+int __pt_mutex_cannot_unlock(pthread_mutex_t *mutex);
 
 static void __pt_timer_thread_entry( __pt_timer_args *arg );
 static int __pt_do_cond_wait( pthread_cond_t *cond, pthread_mutex_t *mutex );
@@ -46,15 +50,21 @@ int pthread_cond_broadcast(pthread_cond_t *cond)
 
 	do
 	{
+		/* The thread might not sleep yet */
+		thread_info sInfo;
+		while( get_thread_info( __current_thread->__thread_id, &sInfo ) == 0 )
+		{
+			if( sInfo.ti_state != TS_READY )
+				break;
+		}
 		resume_thread( __current_thread->__thread_id );
-
 		__next_thread = __current_thread->__next;
 
 		free( __current_thread );
 
 		__current_thread = __next_thread;
 	}
-	while( __current_thread != cond->__head );
+	while( __current_thread != NULL );
 
 	cond->__head = NULL;
 	cond->__count = 0;
@@ -66,6 +76,7 @@ int pthread_cond_broadcast(pthread_cond_t *cond)
 
 int pthread_cond_destroy(pthread_cond_t *cond)
 {
+	//printf( "pthread_cond_destroy() %x %i\n", (uint)cond, cond->__lock );
 	if( cond == NULL )
 		return( EINVAL );
 
@@ -75,7 +86,6 @@ int pthread_cond_destroy(pthread_cond_t *cond)
 	if( cond->__attr != NULL )
 	{
 		pthread_condattr_destroy( cond->__attr );
-		free( cond->__attr );	/* FIXME: This is bogus, the user may not have malloc()'d __attr! */
 	}
 
 	delete_semaphore( cond->__lock );
@@ -86,20 +96,24 @@ int pthread_cond_destroy(pthread_cond_t *cond)
 int pthread_cond_init(pthread_cond_t *cond, const pthread_condattr_t *attr)
 {
 	pthread_condattr_t* cond_attr = NULL;
+	
+	//printf( "pthread_cond_init() %x\n", (uint)cond );
 
 	if( cond == NULL )
 		return( EINVAL );
 
+/* If cond was allocated on the heap it might contain random garbage and look
+	   like a condvar that has already been initialized. There's at least one
+	   program that does this so I've commented out the code below.  - Jan */
+	#if 0
 	if( ( cond->__owner > 0) && ( ( cond->__count > 0 ) || ( cond->__head != NULL ) ) )
 		return( EBUSY );		/* The conditional has (probably) already been initialiased. */
 								/* FIXME: This is a little dodgy, as we don't know what      */
 								/* values will be held in an uninitialised cond...           */
-
+	#endif
 	if( attr == NULL )
 	{
-		cond_attr = malloc( sizeof( pthread_condattr_t ) );
-		if( cond_attr == NULL )
-			return( ENOMEM );
+		cond_attr = &cond->__def_attr;
 
 		pthread_condattr_init( cond_attr ); 
 	}
@@ -110,40 +124,52 @@ int pthread_cond_init(pthread_cond_t *cond, const pthread_condattr_t *attr)
 	cond->__count = 0;				/* Number of threads waiting on this conditional  */
 	cond->__attr = cond_attr;		/* Our own copy of the cond attributes            */
 	cond->__head = NULL;				/* No threads are yet waiting on this conditional */
-	cond->__lock = create_semaphore( "pthread_cond_lock", 1, 0 );
+	cond->__lock = create_semaphore( "pthread_cond_lock", 1, SEM_WARN_DBL_LOCK );
 
+	
 	return( 0 );
 }
 
 int pthread_cond_signal(pthread_cond_t *cond)
 {
 	__pt_thread_list_t* __waiting_thread;
+	//printf( "pthread_cond_signal() %x\n", (uint)cond );
 
 	if( cond == NULL )
+	{
 		return( EINVAL );
+	}
+	
+	__pt_lock_mutex( cond->__lock );
+	
 
 	if( cond->__head == NULL )
+	{
+		__pt_unlock_mutex( cond->__lock );
 		return( 0 );	/* There are no threads to signal, so we return immediatly */
-
-	__pt_lock_mutex( cond->__lock );
+	}
 
 	/* We wake up threads in a FIFO manner.  The spec tells us we should wake threads */
 	/* according to the scheduling policy, but we don't have one, so this will do.    */
 
-	__waiting_thread = cond->__head->__next;
-
-	if( cond->__head->__next == cond->__head->__prev )
-		cond->__head = NULL;
-	else
-	{
-		cond->__head->__next = __waiting_thread->__next;
-		cond->__head->__next->__prev = cond->__head;
-	}
-
-	atomic_add( (atomic_t*)&cond->__count, -1 );
+	__waiting_thread = cond->__head;
+	
+	cond->__head = __waiting_thread->__next;
+	if( cond->__head != NULL )
+		cond->__head->__prev = __waiting_thread->__prev;
+		
+	atomic_dec( (atomic_t*)&cond->__count );
 
 	__pt_unlock_mutex( cond->__lock );
-
+	
+	/* The thread might not sleep yet */
+	thread_info sInfo;
+	while( get_thread_info( __waiting_thread->__thread_id, &sInfo ) == 0 )
+	{
+		if( sInfo.ti_state != TS_READY )
+			break;
+	}
+	
 	resume_thread( __waiting_thread->__thread_id );
 
 	free( __waiting_thread );
@@ -153,10 +179,11 @@ int pthread_cond_signal(pthread_cond_t *cond)
 
 int pthread_cond_timedwait(pthread_cond_t *cond, pthread_mutex_t *mutex, const struct timespec *abstime)
 {
+	//printf("pthread_cond_timed_wait %i\n", get_thread_id( NULL ));
 	thread_id kthread;
-	__pt_timer_args arg;
+	__pt_timer_args* arg;	
 	int ret;
-
+	
 	if( cond == NULL )
 		return( EINVAL );
 
@@ -165,94 +192,159 @@ int pthread_cond_timedwait(pthread_cond_t *cond, pthread_mutex_t *mutex, const s
 
 	if( abstime == NULL )
 		return( EINVAL );
+		
+	arg = malloc( sizeof( __pt_timer_args ) );
+	arg->abstime = (struct timespec*)abstime;
+	arg->thread = pthread_self();
+	arg->cond = cond;
+	arg->error = 0;
 
-	arg.abstime = (struct timespec*)abstime;
-	arg.thread = pthread_self();
-
-	kthread = spawn_thread( "pthread_cond_timer", __pt_timer_thread_entry, NORMAL_PRIORITY, __DEFAULT_STACK_SIZE, &arg);
+	kthread = spawn_thread( "pthread_cond_timer", __pt_timer_thread_entry, NORMAL_PRIORITY, __DEFAULT_STACK_SIZE, arg);
 
 	if( kthread < 0 )
 		return( kthread );
 
 	/* Start the "timer" running */
 	resume_thread( kthread );
+	
 
 	/* Wait on the conditional.  Either pthread_signal(), pthread_broadcast() or the */
 	/* timer thread will wake us up, whichever comes first                           */
 	ret = __pt_do_cond_wait( cond, mutex );
-
-	/* FIXME: We should check & return ETIMEDOUT if applicable                  */
-	/* FIXME: We should remove ourselves from the wait list if the timer thread */
-	/* woke us up.                                                              */
-
+	if( arg->error == 0 )
+	{
+		/* Wakeup up -> tell the timer to exit */
+		resume_thread( kthread );
+	} else
+		ret = -ETIMEDOUT;
+	
 	return( ret );
 }
 
 void __pt_timer_thread_entry( __pt_timer_args *arg )
 {
-	unsigned int usec;
+	struct timeval now;
+	(void)gettimeofday(&now, NULL);
+	__pt_thread_list_t* __current_thread;
+	__pt_thread_list_t* __next_thread;
+	pthread_cond_t *cond = arg->cond;
+	
+	long int sleeptime = arg->abstime->tv_sec * 1000000UL + arg->abstime->tv_nsec / 1000;
+	sleeptime -= now.tv_sec * 1000000UL + now.tv_usec;
+		
+	if( sleeptime < 0 )
+		sleeptime = 0;
+		
+	//printf( "Sleep %i\n", sleeptime / 1000 );
+		
+	sleep( sleeptime / 1000000 );
+	snooze( sleeptime % 1000000 );
+	
+	/* Remove ourself from the list */
+	__pt_lock_mutex( cond->__lock );
 
-	usec = ( arg->abstime->tv_nsec * 100);
+	if( cond->__head != NULL )
+	{
+		__current_thread = cond->__head;
 
-	/* FIXME: This is sloppy and messy.  The clock skew alone is */
-	/* barely worth thinking about!                              */
-	sleep( arg->abstime->tv_sec );
-	usleep( usec );
-
+		do
+		{
+			__next_thread = __current_thread->__next;
+			if( __current_thread->__thread_id == arg->thread )
+			{
+				if( cond->__head == __current_thread )
+				{
+					atomic_dec( (atomic_t*)&cond->__count );
+					cond->__head = __current_thread->__next;
+					if( cond->__head != NULL )
+						cond->__head->__prev = __current_thread->__prev;
+					free( __current_thread );
+				} else 
+				{
+					atomic_dec( (atomic_t*)&cond->__count );
+					__current_thread->__prev->__next = __current_thread->__next;
+					if( __current_thread->__next != NULL )
+						__current_thread->__next->__prev = __current_thread->__prev;
+					else {
+						assert( cond->__head->__prev == __current_thread );
+						cond->__head->__prev = __current_thread->__prev;
+					}
+					free( __current_thread );
+				}
+			}
+			__current_thread = __next_thread;
+		} while( __current_thread != NULL );
+	}
+	__pt_unlock_mutex( cond->__lock );
+	arg->error = -ETIMEDOUT;
+	
+	/* The thread might not sleep yet */
+	thread_info sInfo;
+	while( get_thread_info( arg->thread, &sInfo ) == 0 )
+	{
+		if( sInfo.ti_state != TS_READY )
+			break;
+	}
 	resume_thread( arg->thread );
 
-	exit_thread( 0 );
+	free( arg );
 
 	return;
 }
 
 int pthread_cond_wait(pthread_cond_t *cond, pthread_mutex_t *mutex)
 {
+	//printf("pthread_cond_wait %i\n", get_thread_id( NULL ));
 	if( cond == NULL )
 		return( EINVAL );
 
 	if( mutex == NULL )
 		return( EINVAL );
-
+		
 	return( __pt_do_cond_wait( cond, mutex ) );
 }
 
 int __pt_do_cond_wait( pthread_cond_t *cond, pthread_mutex_t *mutex )
 {
 	__pt_thread_list_t* __waiting_thread;
-
-	if( pthread_mutex_unlock( mutex ) )
-		return( EINVAL );
-
+	
+	if( __pt_mutex_cannot_unlock(mutex) )
+ 		return( EINVAL );
+	
 	__waiting_thread = malloc( sizeof( __pt_thread_list_t ) );
 	if( __waiting_thread == NULL )
 		return( ENOMEM );		/* We're not supposed to return ENOMEM, but we do */
 
 	__waiting_thread->__thread_id = pthread_self();
-
+	
 	__pt_lock_mutex( cond->__lock );
-
+	
+	
 	if( cond->__head != NULL)
 	{
-		__waiting_thread->__next = cond->__head;
+		__pt_thread_list_t* __current_thread = cond->__head;
+		
+		__waiting_thread->__next = NULL;
+		assert( cond->__head->__prev->__next == NULL );
 		__waiting_thread->__prev = cond->__head->__prev;
-		cond->__head->__prev->__next = __waiting_thread;
+		cond->__head->__prev->__next = __waiting_thread; 
+		cond->__head->__prev = __waiting_thread;
+		
 	}
 	else
 	{
 		__waiting_thread->__prev = __waiting_thread;
-		__waiting_thread->__next = __waiting_thread;
+		__waiting_thread->__next = NULL;
 		cond->__head = __waiting_thread;
 	}
 
-	atomic_add( (atomic_t*)&cond->__count, 1 );
+	atomic_inc( (atomic_t*)&cond->__count );
 
-	__pt_unlock_mutex( cond->__lock );
-
+	__pt_unlock_mutex( cond->__lock );	
+	pthread_mutex_unlock( mutex );
 	suspend_thread( __waiting_thread->__thread_id );
+	
 
-	/* FIXME: Is this correct?  Should mutex be locked on return?    */
-	/* OpenGroup do not win any Plain English awards for this one... */
 	pthread_mutex_lock( mutex );
 
 	return( 0 );
@@ -298,4 +390,90 @@ int pthread_condattr_setpshared(pthread_condattr_t *attr, int shared)
 
 	return( 0 );
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
